fixed nav animation, still have to fix overflow for phone

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
 
 body {
     margin: 0 auto;
-    background-image: url("/images/bck_1.png"), url("/images/bcg_n.png");
+    background-image: url("../images/bcg_1.png"), url("../images/bcg_n.png");
     background-size: contain;
     background-repeat: no-repeat, repeat;
 }
@@ -123,9 +123,9 @@ html {
     top: 0;
     transform: translateX(100%);
     transition: var(--delay-mid);
-    background-image: url("/images/bck_1.png");
     background-size: cover;
     background-attachment: fixed;
+    overflow: hidden;
 }
 
 .dropdown-nav {
@@ -133,6 +133,15 @@ html {
     padding: 1em;
     z-index: 1;
     margin-right: 4em;
+}
+
+.nav-bck {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: translateX(-100%);
+    transition: var(--delay-mid);
 }
 
 /*MAIN*/
@@ -210,7 +219,7 @@ html {
     width: 2em;
     background-size: contain;
     cursor: pointer;
-    background-image: url("/images/dropdown.png");
+    background-image: url("../images/dropdown.png");
     transform: scale(0);
     /*TODO set the scale of arrows to 0 if there is only one img (js)*/
 }
